--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,27 @@
 html {
-    background-color: black;
+    background-color: #e3d3ff;
+}
+
+h1 {
+    color: #8c8377;
+    background-color: #bdd4ff;
+}
+
+p {
+    color: #a023a0;
+}
+
+div {
+    background-color: rgb(129, 51, 25);
+    color: #8c8377;
+    width: 200px;
+    height: 200px;
+    border: 5px solid black;
+
+    
+}
+
+a {
+    background-color: rgb(71, 101, 91);
+
 }
