--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,33 +1,14 @@
-body{
-    background-color: rgb(118, 88, 146);
+.micuadro {
+    width: 200px;
+    height: 200px;
+    background-color: blue;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: center;
+   
+   
 }
-/* Border has three properties */
-
-.caja1 {
-    color: green;
-    background-color: yellow;
-    width: 250px;
-    height: 250px;
-    border: 2px solid black;
-    padding: 20px 10px 20px 10px;
-    padding: 20px 10px;
-    padding: 30px;
-    margin: 10px;
-    box-sizing: content-box;
+.micuadro:hover {
+    background-color: pink;
 }
-
-.caja2 {
-    color: black;
-    background-color: white;
-    width: 250px;
-    height: 250px;
-
-}
-
-.caja3  {
-    color: orange;
-    background-color: white;
-    width: 250px;
-    height: 250px;
-}
-
