--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,11 +4,13 @@
     background-color: blue;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 20px;    /* unidades de medidas px em % */
     text-align: center;
-   
-   
+    transition: width 0.5s, height 0.5, background-color 0.5;
+    
 }
 .micuadro:hover {
     background-color: pink;
+    width: 400px;
+    height: 400px;
 }
